<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mood.MoodFragment">

    <EditText
        android:id="@+id/editNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:hint="@string/mood_note_hint"
        android:minLines="2"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSaveMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:text="@string/btn_save_mood"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNote" />

    <Button
        android:id="@+id/btnViewChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:text="@string/btn_view_chart"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNote" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMoods"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing_small"
        app:layout_constraintTop_toBottomOf="@id/btnViewChart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>