<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_60"
    tools:context=".ui.habits.HabitsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/habitsToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/habits_headline"
        app:subtitle="@string/habits_subtitle"
        app:titleCentered="false"
        app:titleTextColor="@color/text_primary"
        app:subtitleTextColor="@color/text_secondary" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHabitSummary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        app:cardBackgroundColor="@color/secondary_30"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerHabits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/habitsToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_large"
            android:paddingTop="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_large"
            android:paddingBottom="@dimen/spacing_large">

            <TextView
                android:id="@+id/textHabitSummaryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habits_focus_title"
                android:textAppearance="@style/TextAppearance.Serenity.Headline2"
                android:textColor="@color/secondary_on" />

            <TextView
                android:id="@+id/textHabitSummaryMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/habits_focus_message"
                android:textAppearance="@style/TextAppearance.Serenity.Body2"
                android:textColor="@color/secondary_on" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonHabitFocus"
                style="@style/Widget.Serenity.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:backgroundTint="@color/accent_10"
                android:paddingStart="@dimen/spacing_large"
                android:paddingEnd="@dimen/spacing_large"
                android:text="@string/habits_focus_action"
                android:textAllCaps="false"
                android:textColor="@color/accent_on"
                app:cornerRadius="@dimen/button_corner_radius" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHabits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_xlarge"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHabitSummary" />

</androidx.constraintlayout.widget.ConstraintLayout>
