<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground">

    <ImageView
        android:id="@+id/imageOnboarding"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing_large"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_serenity_logo" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Serenity.Headline1"
        app:layout_constraintBottom_toTopOf="@id/textDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageOnboarding" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:gravity="center"
        android:text="@string/quote_label"
        android:textAppearance="@style/TextAppearance.Serenity.Body1"
        app:layout_constraintBottom_toTopOf="@id/buttonGetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <Button
        android:id="@+id/buttonGetStarted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:backgroundTint="?attr/colorPrimary"
        android:padding="@dimen/spacing_medium"
        android:text="@string/btn_habits"
        android:textAppearance="@style/TextAppearance.Serenity.Body1"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>